# healty21

./: .gitignore  Pipfile  README.md  game.py  make_db_info.py  make_info_db_info.py  make_user.py  pyproject.toml  requirements.txt  test.sh
.ebextensions/: app.config
community/: admin.py  models.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
config/.ebextensions/: app.config  django.config
game/: admin.py  models.py  urls.py  views.py
info/: models.py  urls.py  views.py
info_db_csv/: exercises.csv  exercises_met.csv  food0.csv  food1.csv  food2.csv  food3.csv  food4.csv  food5.csv  food6.csv  k_food.csv
static/accounts/: auth.css
static/css/: accounts_join.css  accounts_login.css  base.css  community.css  community_detail.css  community_edit.css  community_post.css  game.css  info.css  password_reset.css  social_login.css  styles.css
static/js/: comment_update.js  post_like.js
templates/: 404.html  base.html  ex.html
templates/account/: base.html  login.html  logout.html  password_reset.html  signup.html
templates/community/: community.html  community_detail.html  community_edit.html  community_post.html  signin.html  signup.html
templates/game/: compete_followee.html  competition.html  game_detail.html  index.html  matching.html  quest.html  select.html  select_compete.html  set_goal.html
templates/info/: calories_calculate.html  content_detail.html  content_type.html  info.html  search.html
templates/socialaccount/: login.html  (+3 more)
user/: adapters.py  adaptors.py  admin.py  forms.py  models.py  urls.py  validators.py  views.py
(+18 files in other folders)
