[tool.poetry]
name = "healty21"
version = "0.1.0"
description = ""
authors = ["Claire Chung <35644336+haewonchung@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "5.10.1"
black = "^22.3.0"
Django = "4.0.3"
asgiref = "3.5.0"
"backports.zoneinfo" = "0.2.1"
boto3 = "1.21.18"
botocore = "1.24.18"
django-storages = "1.12.3"
jmespath = "0.10.0"
mysqlclient = "2.1.0"
python-dateutil = "2.8.2"
s3transfer = "0.5.2"
six = "1.16.0"
sqlparse = "0.4.2"
tzdata = "2021.5"
urllib3 = "1.26.8"
django-taggit = "2.1.0"
django-taggit-templatetags2 = "1.6.1"
django-allauth = "~=0.49.0"
requests = "~=2.27.1"
django-crispy-forms = "~=1.14.0"
crispy-bootstrap5 = "~=0.6"
Pillow = "9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
